[package]
name = "link"
version = "0.1.0"
edition = "2021"

[dependencies]
duration-str = "0.11.2"
serde_yaml = "0.9.30"
serde = { version = "1.0.144", features = ["derive"] }
quiche = "0.22.0"
prost = "0.13.1"
deku = "0.17.0"
ring = "0.17.8"
mio = { version = "1.0.0", features = ["net", "os-poll"] }

# workspace
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
prost-build = "0.12.0"

[dev-dependencies]
tracing-subscriber = "0"
